ADD: header menu and it's style; lorem ipsum running text below hero section; DELETE: extra info about me

--- a/style.css
+++ b/style.css
@@ -13,137 +13,149 @@
   color: #ffffff;
 }
 
-#canvas1 {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.01);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
 body {
   font-family: "Manrope", sans-serif;
-  background-color: #ffffff;
+  background-color: #1f1f1f;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: 100svh;
 }
 body a {
   text-decoration: none;
 }
+body li {
+  list-style-type: none;
+}
 body header {
-  width: 80%;
+  margin: auto;
+  position: fixed;
+  background-color: rgba(17, 17, 17, 0.9333333333);
+  width: 100%;
+  top: 0;
+}
+body header .header_content {
+  max-width: 1440px;
   display: flex;
   justify-content: space-between;
-  padding: 30px 0;
   margin: auto;
+  padding: 30px 50px;
 }
-body header .icons {
+body header .header_content .top_menu_wrapper ul {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-body header .icons .burger_menu:hover {
-  cursor: pointer;
+body header .header_content .top_menu_wrapper ul li {
+  width: 100px;
+  text-align: end;
 }
-body header .icons .burger_menu:hover span {
-  background-color: #f1c50e;
-  transition-duration: 400ms;
+body header .header_content .top_menu_wrapper ul li:hover {
+  transition: letter-spacing 500ms linear;
+  letter-spacing: 2px;
 }
-body header .icons .burger_menu span {
-  width: 25px;
-  height: 3px;
-  display: block;
-  background-color: #000000;
-  margin-bottom: 5px;
+body header .header_content .top_menu_wrapper ul li:hover::first-letter {
+  color: #f1c50e;
 }
-body header .icons .social_media {
-  display: flex;
-  gap: 10px;
+body header .header_content .top_menu_wrapper ul li:active {
+  color: #f1c50e;
 }
-body header .icons .social_media a:hover path {
-  fill: #f1c50e;
-  transition: fill 500ms linear;
+@media (max-width: 700px) {
+  body header .header_content .top_menu_wrapper {
+    display: none;
+  }
 }
-body header .icons .social_media path {
-  fill: #e6e6e6;
+body header .header_content .burger_menu {
+  display: none;
 }
-body header .icons .social_media circle {
-  fill: #000000;
+@media (max-width: 700px) {
+  body header .header_content .burger_menu {
+    display: block;
+  }
+  body header .header_content .burger_menu:hover {
+    cursor: pointer;
+  }
+  body header .header_content .burger_menu:hover span {
+    background-color: #f1c50e;
+    transition-duration: 400ms;
+  }
+  body header .header_content .burger_menu span {
+    width: 25px;
+    height: 3px;
+    display: block;
+    background-color: #ffffff;
+    margin-bottom: 5px;
+  }
 }
 body main {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1440px;
+  margin: auto;
 }
-body main .card_text_wrapper {
+body main .hero_wrapper {
+  margin-top: 100px;
+  min-height: 600px;
+  display: flex;
+}
+body main .hero_wrapper .hero_text_wrapper {
   flex: 1;
-  background-color: #1a1a1a;
+  background-color: #111111;
   padding: 30px 50px;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
-body main .card_text_wrapper .card_text_content {
+body main .hero_wrapper .hero_text_wrapper .hero_text_content {
   max-width: 630px;
 }
-body main .card_text_wrapper .card_text_content h1 {
+body main .hero_wrapper .hero_text_wrapper .hero_text_content h1 {
   font-size: 2.5rem;
   font-weight: 400;
 }
-body main .card_text_wrapper .card_text_content h2 {
+body main .hero_wrapper .hero_text_wrapper .hero_text_content h2 {
   margin: 35px 0;
   font-weight: 300;
   font-size: 1.875rem;
   color: #c0c0c0;
 }
-body main .card_text_wrapper .card_text_content .email {
-  display: block;
-  color: #f1c50e;
-  font-size: 1.125rem;
-  margin-bottom: 10px;
-}
-body main .card_text_wrapper .card_text_content .email:hover {
-  color: #ffffff;
-}
-body main .card_text_wrapper .card_text_content h3 {
-  margin: 30px 0;
-  font-weight: 300;
-  font-size: 1.875rem;
-  color: #c0c0c0;
-}
-body main .card_text_wrapper .card_text_content .address {
-  font-size: 1.125rem;
-  line-height: 30px;
-  margin-bottom: 30px;
-}
-body main .card_text_wrapper .card_text_content .phone,
-body main .card_text_wrapper .card_text_content .social_links a {
+body main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a {
   line-height: 40px;
   display: block;
   font-size: 1.125rem;
 }
-body main .card_text_wrapper .card_text_content .social_links a:hover {
+body main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a:hover {
   color: #f1c50e;
 }
-body main .card_img {
+body main .hero_wrapper .hero_img {
   flex: 1;
-  background-image: url("./imgs/gffgfgfg-min.jpg");
+  background-image: url("/v1_portfolio/imgs/gffgfgfg-min.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
 @media (max-width: 700px) {
-  body main {
-    background-color: #1a1a1a;
+  body main .hero_wrapper {
+    background-color: #111111;
     flex-direction: column;
   }
-  body main .card_img {
+  body main .hero_wrapper .hero_img {
     height: 500px;
     flex: none;
   }
 }
-body aside {
+body .lorem_ipsum_wrapper {
+  overflow-x: hidden;
+  margin-top: 100px;
+  padding: 15px 20px;
+  background-color: black;
+}
+body .lorem_ipsum_wrapper p {
+  width: -moz-max-content;
+  width: max-content;
+  font-size: 5rem;
+}
+body .side_menu_wrapper {
   background-color: #000000;
   opacity: 0.95;
   position: fixed;
@@ -155,39 +167,34 @@ body aside {
   transform: translateX(-100%);
   transition: transform 500ms;
 }
-@media screen and (max-width: 600px) {
-  body aside {
+@media (max-width: 600px) {
+  body .side_menu_wrapper {
     width: 100%;
   }
 }
-body aside img {
+body .side_menu_wrapper img {
   position: absolute;
   top: 20px;
   right: 20px;
   cursor: pointer;
 }
-body aside ul {
+body .side_menu_wrapper ul {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding-top: 100px;
+  height: 100%;
 }
-body aside ul a {
-  color: #ffffff;
+@media (max-width: 600px) {
+  body .side_menu_wrapper ul {
+    justify-content: center;
+  }
+}
+body .side_menu_wrapper ul a {
   display: inline-block;
   font-size: 1.125rem;
 }
-body aside ul a li {
-  list-style-type: none;
-}
-body aside ul a li:hover {
-  transition: letter-spacing 500ms linear;
-  letter-spacing: 5px;
-}
-body aside ul a li:hover::first-letter {
-  color: #f1c50e;
-}
-body aside ul a li:active {
+body .side_menu_wrapper ul a::first-letter {
   color: #f1c50e;
 }
 body .modal {
