--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@
 
 body {
   font-family: "Manrope", sans-serif;
-  background-color: #1f1f1f;
+  background-color: #111111;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  height: 1000vh;
 }
 body a {
   text-decoration: none;
@@ -27,7 +28,6 @@ body li {
   list-style-type: none;
 }
 body header {
-  background-color: rgba(17, 17, 17, 0.3764705882);
   margin: auto;
   width: 100%;
 }
@@ -38,66 +38,59 @@ body header .header_content {
   margin: auto;
   padding: 30px 50px;
 }
-body header .header_content .top_menu_wrapper ul {
+body header .top_menu_wrapper ul {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-body header .header_content .top_menu_wrapper ul li {
+body header .top_menu_wrapper ul li {
   border-bottom: 1px solid transparent;
   position: relative;
   padding: 5px 10px;
 }
-body header .header_content .top_menu_wrapper ul li::first-letter {
+body header .top_menu_wrapper ul li::first-letter {
   color: #f1c50e;
 }
-body header .header_content .top_menu_wrapper ul li::before, body header .header_content .top_menu_wrapper ul li::after {
+body header .top_menu_wrapper ul li:hover {
+  transition-delay: 300ms;
+  color: black;
+}
+body header .top_menu_wrapper ul li:hover::first-letter {
+  color: white;
+}
+body header .top_menu_wrapper ul li:hover::after {
+  animation: fillBG 500ms forwards ease-in-out;
+}
+body header .top_menu_wrapper ul li::after {
   content: "";
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
-  width: 100%;
+  bottom: 0;
+  left: 0;
+  width: 0;
   height: 100%;
-  transition: transform 400ms;
-}
-body header .header_content .top_menu_wrapper ul li::before {
-  border: 1px solid rgba(241, 196, 14, 0.5607843137);
-  bottom: 3px;
-  left: 3px;
-}
-body header .header_content .top_menu_wrapper ul li::after {
-  border: 1px solid #f1c40e;
-  box-shadow: 3px -3px 5px rgba(241, 196, 14, 0.3098039216), inset 3px -3px 5px rgba(241, 196, 14, 0.3098039216);
-  top: 3px;
-  right: 3px;
-}
-body header .header_content .top_menu_wrapper ul li:hover::before {
-  transform: translate(-3px, 3px);
-}
-body header .header_content .top_menu_wrapper ul li:hover::after {
-  transform: translate(3px, -3px);
+  background-color: #f1c40e;
+  z-index: -1;
 }
 @media (max-width: 700px) {
-  body header .header_content .top_menu_wrapper {
+  body header .top_menu_wrapper {
     display: none;
   }
 }
-body header .header_content .burger_menu {
+body header .burger_menu {
   display: none;
 }
 @media (max-width: 700px) {
-  body header .header_content .burger_menu {
+  body header .burger_menu {
     display: block;
   }
-  body header .header_content .burger_menu:hover {
+  body header .burger_menu:hover {
     cursor: pointer;
   }
-  body header .header_content .burger_menu:hover span {
+  body header .burger_menu:hover span {
     background-color: #f1c50e;
     transition-duration: 400ms;
   }
-  body header .header_content .burger_menu span {
+  body header .burger_menu span {
     width: 25px;
     height: 3px;
     display: block;
@@ -105,7 +98,7 @@ body header .header_content .burger_menu {
     margin-bottom: 5px;
   }
 }
-body header .on_scroll_header {
+body .on_scroll_header {
   position: fixed;
   margin-top: 50svh;
   right: 30px;
@@ -114,9 +107,8 @@ body header .on_scroll_header {
   grid-template-rows: 1fr 1fr;
   gap: 10px;
   transform: rotate(45deg);
-  animation: rotateScrollMenu 500ms;
 }
-body header .on_scroll_header li {
+body .on_scroll_header li {
   transform: rotate(-45deg);
   position: relative;
   display: flex;
@@ -125,101 +117,125 @@ body header .on_scroll_header li {
   background-color: #000000;
   cursor: pointer;
   color: #f1c40e;
-  transition: border-radius 500ms;
 }
-body header .on_scroll_header li:hover:nth-child(1) {
-  border-radius: 5px;
-}
-body header .on_scroll_header li:hover:nth-child(1)::after {
-  position: absolute;
+body .on_scroll_header li:hover:nth-child(1)::after {
   width: -moz-max-content;
   width: max-content;
+  position: absolute;
   padding: 5px;
   color: black;
-  top: -35px;
+  top: -32px;
   background-color: #f1c40e;
   font-size: 12px;
   border-radius: 5px;
   right: 0;
 }
-body header .on_scroll_header li:hover:nth-child(2) {
-  border-radius: 5px;
-}
-body header .on_scroll_header li:hover:nth-child(2)::after {
+body .on_scroll_header li:hover:nth-child(1)::before {
+  content: "";
   position: absolute;
+  width: 0px;
+  height: 0px;
+  top: -5px;
+  border-radius: 0px;
+  right: calc(50% - 5px);
+  border: 5px solid transparent;
+  border-top: 5px solid #f1c40e;
+}
+body .on_scroll_header li:hover:nth-child(2)::after {
   width: -moz-max-content;
   width: max-content;
+  position: absolute;
   padding: 5px;
   color: black;
-  top: -35px;
+  top: -32px;
   background-color: #f1c40e;
   font-size: 12px;
   border-radius: 5px;
   right: 0;
 }
-body header .on_scroll_header li:hover:nth-child(3) {
-  border-radius: 5px;
-}
-body header .on_scroll_header li:hover:nth-child(3)::after {
+body .on_scroll_header li:hover:nth-child(2)::before {
+  content: "";
   position: absolute;
+  width: 0px;
+  height: 0px;
+  top: -5px;
+  border-radius: 0px;
+  right: calc(50% - 5px);
+  border: 5px solid transparent;
+  border-top: 5px solid #f1c40e;
+}
+body .on_scroll_header li:hover:nth-child(3)::after {
   width: -moz-max-content;
   width: max-content;
+  position: absolute;
   padding: 5px;
   color: black;
-  top: -35px;
+  top: -32px;
   background-color: #f1c40e;
   font-size: 12px;
   border-radius: 5px;
   right: 0;
 }
-body header .on_scroll_header li:hover:nth-child(4) {
-  border-radius: 5px;
-}
-body header .on_scroll_header li:hover:nth-child(4)::after {
+body .on_scroll_header li:hover:nth-child(3)::before {
+  content: "";
   position: absolute;
+  width: 0px;
+  height: 0px;
+  top: -5px;
+  border-radius: 0px;
+  right: calc(50% - 5px);
+  border: 5px solid transparent;
+  border-top: 5px solid #f1c40e;
+}
+body .on_scroll_header li:hover:nth-child(4)::after {
   width: -moz-max-content;
   width: max-content;
+  position: absolute;
   padding: 5px;
   color: black;
-  top: -35px;
+  top: -32px;
   background-color: #f1c40e;
   font-size: 12px;
   border-radius: 5px;
   right: 0;
 }
-body header .on_scroll_header li:hover:nth-child(1)::after {
+body .on_scroll_header li:hover:nth-child(4)::before {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  top: -5px;
+  border-radius: 0px;
+  right: calc(50% - 5px);
+  border: 5px solid transparent;
+  border-top: 5px solid #f1c40e;
+}
+body .on_scroll_header li:hover:nth-child(1)::after {
   content: "Home";
 }
-body header .on_scroll_header li:hover:nth-child(2)::after {
+body .on_scroll_header li:hover:nth-child(2)::after {
   content: "Skills";
 }
-body header .on_scroll_header li:hover:nth-child(3)::after {
+body .on_scroll_header li:hover:nth-child(3)::after {
   content: "Portfolio";
 }
-body header .on_scroll_header li:hover:nth-child(4)::after {
+body .on_scroll_header li:hover:nth-child(4)::after {
   content: "About";
 }
-@keyframes rotateScrollMenu {
-  0% {
-    transform: rotate(-45deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-body main {
+
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   max-width: 1440px;
   margin: auto;
 }
-body main .hero_wrapper {
-  margin-top: 50px;
+main .hero_wrapper {
   min-height: 600px;
   display: flex;
+  position: relative;
 }
-body main .hero_wrapper .hero_text_wrapper {
+main .hero_wrapper .hero_text_wrapper {
   flex: 1;
   background-color: #111111;
   padding: 30px 50px;
@@ -227,56 +243,66 @@ body main .hero_wrapper .hero_text_wrapper {
   align-items: center;
   justify-content: center;
 }
-body main .hero_wrapper .hero_text_wrapper .hero_text_content {
+main .hero_wrapper .hero_text_wrapper .hero_text_content {
+  position: relative;
+  z-index: 2;
   max-width: 630px;
 }
-body main .hero_wrapper .hero_text_wrapper .hero_text_content h1 {
+main .hero_wrapper .hero_text_wrapper .hero_text_content h1 {
   font-size: 2.5rem;
   font-weight: 400;
 }
-body main .hero_wrapper .hero_text_wrapper .hero_text_content h2 {
+main .hero_wrapper .hero_text_wrapper .hero_text_content h2 {
   margin: 35px 0;
   font-weight: 300;
   font-size: 1.875rem;
   color: #c0c0c0;
 }
-body main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a {
+main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a {
   line-height: 40px;
   display: block;
   font-size: 1.125rem;
 }
-body main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a:hover {
+main .hero_wrapper .hero_text_wrapper .hero_text_content .social_links a:hover {
   color: #f1c50e;
 }
-body main .hero_wrapper .hero_img {
+main .hero_wrapper .hero_img {
   flex: 1;
-  background-image: url("/v1_portfolio/imgs/gffgfgfg-min.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+}
+main .hero_wrapper .hero_img path {
+  opacity: 0.5;
+}
+main .hero_wrapper .hero_img path:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+main .hero_wrapper .hero_img path:active {
+  stroke-width: 15px;
+  opacity: 0.3;
 }
 @media (max-width: 700px) {
-  body main .hero_wrapper {
+  main .hero_wrapper {
     background-color: #111111;
     flex-direction: column;
   }
-  body main .hero_wrapper .hero_img {
+  main .hero_wrapper .hero_img {
     height: 500px;
     flex: none;
   }
 }
-body .lorem_ipsum_wrapper {
+
+.lorem_ipsum_wrapper {
   overflow-x: hidden;
-  margin-top: 100px;
   padding: 15px 20px;
   background-color: black;
 }
-body .lorem_ipsum_wrapper p {
+.lorem_ipsum_wrapper p {
   width: -moz-max-content;
   width: max-content;
   font-size: 5rem;
 }
-body .side_menu_wrapper {
+
+.side_menu_wrapper {
   background-color: #000000;
   opacity: 0.95;
   position: fixed;
@@ -289,22 +315,22 @@ body .side_menu_wrapper {
   transition: transform 500ms;
 }
 @media (max-width: 600px) {
-  body .side_menu_wrapper {
+  .side_menu_wrapper {
     width: 100%;
   }
 }
-body .side_menu_wrapper img {
+.side_menu_wrapper img {
   position: absolute;
   top: 20px;
   right: 20px;
   cursor: pointer;
 }
 @media (max-width: 600px) {
-  body .side_menu_wrapper img {
+  .side_menu_wrapper img {
     width: 20px;
   }
 }
-body .side_menu_wrapper ul {
+.side_menu_wrapper ul {
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -312,21 +338,22 @@ body .side_menu_wrapper ul {
   height: 100%;
 }
 @media (max-width: 600px) {
-  body .side_menu_wrapper ul {
+  .side_menu_wrapper ul {
     justify-content: center;
   }
-  body .side_menu_wrapper ul li {
+  .side_menu_wrapper ul li {
     font-size: 1.5rem;
   }
 }
-body .side_menu_wrapper ul a {
+.side_menu_wrapper ul a {
   display: inline-block;
   font-size: 1.125rem;
 }
-body .side_menu_wrapper ul a::first-letter {
+.side_menu_wrapper ul a::first-letter {
   color: #f1c50e;
 }
-body .modal {
+
+.modal {
   background-color: #000000;
   opacity: 0.5;
   width: 100%;
