--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   color: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Manrope", sans-serif;
   background-color: #111111;
@@ -108,7 +112,7 @@ body .on_scroll_header {
   gap: 10px;
   transform: rotate(45deg);
 }
-body .on_scroll_header li {
+body .on_scroll_header a {
   transform: rotate(-45deg);
   position: relative;
   display: flex;
@@ -118,7 +122,7 @@ body .on_scroll_header li {
   cursor: pointer;
   color: #f1c40e;
 }
-body .on_scroll_header li:hover:nth-child(1)::after {
+body .on_scroll_header a:hover:nth-child(1)::after {
   width: -moz-max-content;
   width: max-content;
   position: absolute;
@@ -130,7 +134,7 @@ body .on_scroll_header li:hover:nth-child(1)::after {
   border-radius: 5px;
   right: 0;
 }
-body .on_scroll_header li:hover:nth-child(1)::before {
+body .on_scroll_header a:hover:nth-child(1)::before {
   content: "";
   position: absolute;
   width: 0px;
@@ -141,7 +145,7 @@ body .on_scroll_header li:hover:nth-child(1)::before {
   border: 5px solid transparent;
   border-top: 5px solid #f1c40e;
 }
-body .on_scroll_header li:hover:nth-child(2)::after {
+body .on_scroll_header a:hover:nth-child(2)::after {
   width: -moz-max-content;
   width: max-content;
   position: absolute;
@@ -153,7 +157,7 @@ body .on_scroll_header li:hover:nth-child(2)::after {
   border-radius: 5px;
   right: 0;
 }
-body .on_scroll_header li:hover:nth-child(2)::before {
+body .on_scroll_header a:hover:nth-child(2)::before {
   content: "";
   position: absolute;
   width: 0px;
@@ -164,7 +168,7 @@ body .on_scroll_header li:hover:nth-child(2)::before {
   border: 5px solid transparent;
   border-top: 5px solid #f1c40e;
 }
-body .on_scroll_header li:hover:nth-child(3)::after {
+body .on_scroll_header a:hover:nth-child(3)::after {
   width: -moz-max-content;
   width: max-content;
   position: absolute;
@@ -176,7 +180,7 @@ body .on_scroll_header li:hover:nth-child(3)::after {
   border-radius: 5px;
   right: 0;
 }
-body .on_scroll_header li:hover:nth-child(3)::before {
+body .on_scroll_header a:hover:nth-child(3)::before {
   content: "";
   position: absolute;
   width: 0px;
@@ -187,7 +191,7 @@ body .on_scroll_header li:hover:nth-child(3)::before {
   border: 5px solid transparent;
   border-top: 5px solid #f1c40e;
 }
-body .on_scroll_header li:hover:nth-child(4)::after {
+body .on_scroll_header a:hover:nth-child(4)::after {
   width: -moz-max-content;
   width: max-content;
   position: absolute;
@@ -199,7 +203,7 @@ body .on_scroll_header li:hover:nth-child(4)::after {
   border-radius: 5px;
   right: 0;
 }
-body .on_scroll_header li:hover:nth-child(4)::before {
+body .on_scroll_header a:hover:nth-child(4)::before {
   content: "";
   position: absolute;
   width: 0px;
@@ -210,16 +214,16 @@ body .on_scroll_header li:hover:nth-child(4)::before {
   border: 5px solid transparent;
   border-top: 5px solid #f1c40e;
 }
-body .on_scroll_header li:hover:nth-child(1)::after {
+body .on_scroll_header a:hover:nth-child(1)::after {
   content: "Home";
 }
-body .on_scroll_header li:hover:nth-child(2)::after {
+body .on_scroll_header a:hover:nth-child(2)::after {
   content: "Skills";
 }
-body .on_scroll_header li:hover:nth-child(3)::after {
+body .on_scroll_header a:hover:nth-child(3)::after {
   content: "Portfolio";
 }
-body .on_scroll_header li:hover:nth-child(4)::after {
+body .on_scroll_header a:hover:nth-child(4)::after {
   content: "About";
 }
 
