--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @property --gradient-black-1 {
   syntax: "<color>";
   inherits: true;
-  initial-value: rgb(0, 0, 0);
+  initial-value: rgb(5, 5, 5);
 }
 @property --gradient-black-2 {
   syntax: "<color>";
@@ -33,7 +33,8 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: 1000vh;
+  background: linear-gradient(90deg, var(--gradient-black-1), var(--gradient-black-1), var(--gradient-black-2));
+  height: 500svh;
 }
 body a {
   text-decoration: none;
